<resources>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_check_box">%1$s check box</string>
    <string name="accessibility_filmstrip_toggle">Toggle filmstrip</string>
    <string name="accessibility_menu_button">Menu button</string>
    <string name="accessibility_mode_list_hidden">Mode list closed</string>
    <string name="accessibility_mode_list_shown">Mode list open</string>
    <string name="accessibility_mode_list_toggle">Toggle mode list</string>
    <string name="accessibility_mode_options">Options</string>
    <string name="accessibility_mode_zoom_minus">Zoom out</string>
    <string name="accessibility_mode_zoom_plus">Zoom in</string>
    <string name="accessibility_review_cancel">Review cancel</string>
    <string name="accessibility_review_ok">Review done</string>
    <string name="accessibility_review_retake">Review retake</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_switch_to_camera">Switch to photo</string>
    <string name="accessibility_switch_to_gcam">Switch to high quality</string>
    <string name="accessibility_switch_to_panorama">Switch to panorama</string>
    <string name="accessibility_switch_to_photo_sphere">Switch to Photo Sphere</string>
    <string name="accessibility_switch_to_refocus">Switch to refocus</string>
    <string name="accessibility_switch_to_video">Switch to video</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_zoom_announcement">Zoom value is %.1f</string>
    <string name="alert_storage_dialog_cancel">CANCEL</string>
    <string name="alert_storage_dialog_message">Change saving location to the SD card? You can switch back in the camera settings.</string>
    <string name="alert_storage_dialog_ok">OK</string>
    <string name="alert_storage_dialog_title">SD card inserted</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="apvc_err_stitch_direction">Panorama capture Wrong direction</string>
    <string name="apvc_err_stitch_only_one_frame">Panorama capture Only one frame taken</string>
    <string name="apvc_err_trace_direction">Panorama capture movement direction was wrong</string>
    <string name="apvc_err_trace_interfernce">Panorama capture Movement too fast</string>
    <string name="apvc_err_trace_no_featue">Record panorama Recognize feature fail</string>
    <string name="auto">Auto</string>
    <string name="barcode_copy">Copy</string>
    <string name="barcode_email_second_button_text">ADD TO CONTACTS</string>
    <string name="barcode_license_format_content">"licenseNumber : %1$s
addressCity : %2$s
addressState : %3$s
addressStreet : %4$s
addressZip : %5$s
birthDate : %6$s 
documentType : %7$s
expiryDate : %8$s
firstName : %9$s
middleName : %10$s
lastName : %11$s
gender : %12$s
issueDate : %13$s
issuingCountry : %14$s"</string>
    <string name="barcode_phone_second_button_text">SEND MESSAGE</string>
    <string name="barcode_show_text_activity_label">QR code scanner</string>
    <string name="barcode_text_second_button_text">SEARCH IN BROWSER</string>
    <string name="barcode_title_calendar">Add to Calendar</string>
    <string name="barcode_title_contact">Add to Contact</string>
    <string name="barcode_title_email">Compose an email to</string>
    <string name="barcode_title_geo">Open in map</string>
    <string name="barcode_title_isbn">Search in browser</string>
    <string name="barcode_title_license">View diver license / ID Information</string>
    <string name="barcode_title_phone">Call</string>
    <string name="barcode_title_sms">Compose a message to</string>
    <string name="barcode_title_text">View text</string>
    <string name="barcode_title_url">Open in browser</string>
    <string name="barcode_title_wifi">Connect to Wi-Fi network</string>
    <string name="beauty_accessibility_peek">Beauty Photo taken</string>
    <string name="beauty_mode_off">Beauty off</string>
    <string name="beauty_mode_off_desc">Beauty off</string>
    <string name="beauty_mode_on">Beauty on</string>
    <string name="beauty_mode_on_desc">Beauty on</string>
    <string name="btn_filmstrip_toggle">Filmstrip</string>
    <string name="btn_mode_list_toggle">Mode list</string>
    <string name="btn_zoom_minus">Z-</string>
    <string name="btn_zoom_plus">Z+</string>
    <string name="button_change_announcement">Button is now %s</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_id_back_desc">Back camera</string>
    <string name="camera_id_back_slave_desc">Back slave camera</string>
    <string name="camera_id_front_desc">Front camera</string>
    <string name="camera_menu_more_label">MORE OPTIONS</string>
    <string name="camera_menu_settings_label">SETTINGS</string>
    <string name="camera_screen_off">Camera screen is off</string>
    <string name="camera_screen_on">Camera screen is on</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cannot_load_image">Cannot load the image.</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="capturing">Capturing</string>
    <string name="clear_effects">Clear effects</string>
    <string name="cling_text_for_refocus_editor_button">Touch here to refocus</string>
    <string name="close">Close</string>
    <string name="confirm_button_text">OK, GOT IT</string>
    <string name="copy_complete">Copy complete</string>
    <string name="count_down_title_text">Counting down to take a photo</string>
    <string name="countdown_mode_10s">10s</string>
    <string name="countdown_mode_3s">3s</string>
    <string name="countdown_timer_duration_10s">Countdown timer duration is set to 10 seconds</string>
    <string name="countdown_timer_duration_3s">Countdown timer duration is set to 3 seconds</string>
    <string name="countdown_timer_off">Countdown timer is off</string>
    <string name="create_tiny_planet">Create Tiny Planet</string>
    <string name="crop_action">Crop</string>
    <string name="crop_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="done_button_description">Done</string>
    <string name="dualsight_tutorial_hint">Tap, hold and drag the divider to adjust the ratio of the screen</string>
    <string name="mode_camera">Camera</string>
    <string name="mode_video">Video</string>
    <string name="pref_brand_logo_show_description">Show watermark on photos</string>
    <string name="pref_camera_auto_hdr_description">Photo mode only</string>
    <string name="pref_camera_auto_hdr_title">HDR Support</string>
    <string name="pref_camera_guideline_description">Show the rule of thirds in viewfinder</string>
    <string name="pref_camera_guideline_title">Grid</string>
    <string name="pref_camera_recordlocation_description">Save photo location info</string>
    <string name="pref_camera_recordlocation_title">Location tag</string>
    <string name="pref_category_about_feedback">Send feedback</string>
    <string name="pref_category_about_rate">Rate app</string>
    <string name="pref_category_about_title">About</string>
    <string name="pref_category_about_version">Version</string>
    <string name="pref_category_live_broadcast_title">Live broadcast account</string>
    <string name="pref_category_resolution_description">Set Resolution of photo &amp; video of main or front camera</string>
    <string name="pref_category_resolution_title">Resolution</string>
    <string name="pref_data_storage_title">Data storage</string>
    <string name="pref_front_camera_mirror_description">Save photos in mirror mode</string>
    <string name="pref_front_camera_mirror_title">Mirror photos for front camera</string>
    <string name="pref_live_broadcast_account_title">Account</string>
    <string name="pref_live_broadcast_logout_dialog_cancel">Cancel</string>
    <string name="pref_live_broadcast_logout_dialog_message">Log out account?</string>
    <string name="pref_live_broadcast_logout_dialog_ok">Log out</string>
    <string name="pref_live_broadcast_logout_title">Log out</string>
    <string name="pref_live_broadcast_privacy_title">Privacy</string>
    <string name="pref_reset_settings_description">Restore camera to its default settings</string>
    <string name="pref_reset_settings_dialog_message">Restore camera to its default settings?</string>
    <string name="pref_reset_settings_dialog_title">Reset</string>
    <string name="pref_reset_settings_title">Reset settings</string>
    <string name="pref_scene_detection_description">Detect different scenes to apply different optical parameters automatically</string>
    <string name="pref_scene_detection_title">Scene detection</string>
    <string name="pref_shutter_control_boolean_description">Long press on shutter takes burst of photos</string>
    <string name="pref_shutter_control_boolean_title">Burst shot</string>
    <string name="pref_shutter_sound_description">A sound made when the shutter opens</string>
    <string name="pref_shutter_sound_title">Shutter sound</string>
    <string name="pref_watermark_show_title">Watermark</string>
    <string name="pro_mode_tutorial_btn_finish">GOT IT</string>
    <string name="pro_mode_tutorial_btn_skip">SKIP</string>
    <string name="retake_button_description">Retake</string>
    <string name="setting_back_camera_photo">Back camera photo</string>
    <string name="setting_back_camera_video">Back camera video</string>
    <string name="setting_front_camera_photo">Front camera photo</string>
    <string name="setting_front_camera_video">Front camera video</string>
    <string name="startup_dialog_button_agree">Agree</string>
    <string name="startup_dialog_button_exit">Exit</string>
    <string name="startup_dialog_button_next">NEXT</string>
    <string name="user_agreement_message">"Dear user,

Welcome to the Camera application. Before using the app, please read the following terms carefully. If you agree to these terms, please press \"AGREE\" to use the app. If you don’t agree to these terms, please press \"EXIT\" to exit the app. 

In order to provide you with comprehensive services, the app needs the following permissions:

1. Enable mobile data
2. Enable WLAN
3. Get location"</string>
    <string name="user_agreement_never_show_text">Do not show again.</string>
    <string name="user_agreement_title">Tips</string>
    <string name="pref_live_broadcast_account_weibo_title">Weibo</string>
    <string name="pref_sr_setting_boolean_description">Take full resolution photo</string>
    <string name="pref_sr_setting_boolean_title">Full resolution image</string>
    <string name="pref_camera_guideline_default">0</string>
    <string name="pref_camera_hdr_default">auto</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_data_storage_default">phone</string>
    <string name="pref_front_camera_mirror_default">0</string>
    <string name="pref_live_broadcast_account_facebook_privacy_default">EVERYONE</string>
    <string name="pref_live_broadcast_account_facebook_title">Facebook</string>
    <string name="pref_live_broadcast_account_weibo_privacy_default">0</string>
    <string name="pref_live_broadcast_account_youtube_privacy_default">public</string>
    <string name="pref_live_broadcast_account_youtube_title">YouTube</string>
    <string name="pref_scene_detection_default">1</string>
    <string name="pref_shutter_control_default">1</string>
    <string name="pref_shutter_sound_default">1</string>
    <string name="pref_sr_setting_default">0</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_watermark_show_default">0</string>
</resources>