<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.camera.settings.ManagedSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_scene_detection_title" android:key="pref_scene_detection_key" android:summary="@string/pref_scene_detection_description" android:defaultValue="@string/pref_scene_detection_default" />
    <com.android.camera.settings.HDRManagedListPreference android:entries="@array/pref_data_hdr_entries" android:layout="@layout/preference_layout" android:title="@string/pref_camera_auto_hdr_title" android:key="pref_camera_hdr_key" android:summary="@string/pref_camera_auto_hdr_description" android:defaultValue="@string/pref_camera_hdr_default" android:negativeButtonText="@string/dialog_cancel" android:entryValues="@array/pref_data_hdr_entryvalues" />
    <com.android.camera.settings.ManagedSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_sr_setting_boolean_title" android:key="pref_sr_setting_boolean_key" android:summary="@string/pref_sr_setting_boolean_description" android:defaultValue="@string/pref_sr_setting_default" />
    <com.android.camera.settings.ManagedSwitchPreference android:title="@string/pref_shutter_control_boolean_title" android:key="pref_shutter_control_boolean_key" android:summary="@string/pref_shutter_control_boolean_description" android:defaultValue="@string/pref_shutter_control_default" /> android:title="@string/pref_shutter_control_title"
        android:summary="@string/pref_shutter_control_boolean_description"
        android:layout="@layout/preference_layout"/>
<com.android.camera.settings.ManagedSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_shutter_sound_title" android:key="pref_shutter_sound_key" android:summary="@string/pref_shutter_sound_description" android:defaultValue="@string/pref_shutter_sound_default" />
    <com.android.camera.settings.ManagedSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_camera_guideline_title" android:key="pref_camera_grid_lines" android:summary="@string/pref_camera_guideline_description" android:defaultValue="@string/pref_camera_guideline_default" />
    <com.android.camera.settings.ManagedSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_watermark_show_title" android:key="pref_brand_logo_show_key" android:summary="@string/pref_brand_logo_show_description" android:defaultValue="@string/pref_watermark_show_default" />
    <com.android.camera.settings.ManagedSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_front_camera_mirror_title" android:key="pref_front_camera_mirror_key" android:summary="@string/pref_front_camera_mirror_description" android:defaultValue="@string/pref_front_camera_mirror_default" />
    <com.android.camera.settings.LocationSwitchPreference android:layout="@layout/preference_layout" android:title="@string/pref_camera_recordlocation_title" android:key="pref_camera_recordlocation_key" android:summary="@string/pref_camera_recordlocation_description" android:defaultValue="false" />
    <com.android.camera.settings.ManagedListPreference android:entries="@array/pref_data_storage_entries" android:layout="@layout/preference_layout" android:title="@string/pref_data_storage_title" android:key="pref_data_storage_key" android:summary="%s" android:defaultValue="@string/pref_data_storage_default" android:entryValues="@array/pref_data_storage_entryvalues" />
    <PreferenceScreen android:layout="@layout/preference_layout" android:title="@string/pref_category_resolution_title" android:key="pref_category_resolution" android:summary="@string/pref_category_resolution_description">
        <PreferenceCategory android:title="@string/mode_camera" android:key="pref_category_photo_resolution">
            <ListPreference android:layout="@layout/preference_layout" android:title="@string/setting_back_camera_photo" android:key="pref_camera_picturesize_back_key" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
            <ListPreference android:layout="@layout/preference_layout" android:title="@string/setting_front_camera_photo" android:key="pref_camera_picturesize_front_key" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_video_resolution">
            <ListPreference android:layout="@layout/preference_layout" android:title="@string/setting_back_camera_video" android:key="pref_video_quality_back_key" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
            <ListPreference android:layout="@layout/preference_layout" android:title="@string/setting_front_camera_video" android:key="pref_video_quality_front_key" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/pref_category_live_broadcast_title" android:key="pref_category_live_broadcast">
        <Preference android:title="@string/pref_live_broadcast_account_weibo_title" android:key="pref_live_broadcast_account_weibo" />
        <Preference android:title="@string/pref_live_broadcast_account_facebook_title" android:key="pref_live_broadcast_account_facebook" />
        <Preference android:title="@string/pref_live_broadcast_account_youtube_title" android:key="pref_live_broadcast_account_youtube" />
    </PreferenceScreen>
    <com.android.camera.settings.ResetDialogPreference android:layout="@layout/preference_layout" android:title="@string/pref_reset_settings_title" android:key="pref_reset_settings_key" android:summary="@string/pref_reset_settings_description" android:dialogTitle="@string/pref_reset_settings_dialog_title" android:dialogMessage="@string/pref_reset_settings_dialog_message" android:positiveButtonText="@string/dialog_ok" android:negativeButtonText="@string/dialog_cancel" />
    <PreferenceScreen android:layout="@layout/preference_layout" android:title="@string/pref_category_about_title" android:key="pref_category_about">
        <Preference android:layout="@layout/preference_layout" android:title="@string/pref_category_about_version" android:key="pref_about_app_version" />
        <Preference android:layout="@layout/preference_layout" android:title="@string/pref_category_about_rate" android:key="pref_about_app_rate" />
        <Preference android:layout="@layout/preference_layout" android:title="@string/pref_category_about_feedback" android:key="pref_about_app_feedback" />
    </PreferenceScreen>
</PreferenceScreen>