<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" style="@style/start_up_dialog_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="28.0dip" android:text="@string/user_agreement_title" style="@style/fullscreen_dialog_title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="300.0dip">
        <TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="28.0dip" android:layout_marginRight="28.0dip" android:layout_marginBottom="28.0dip" android:text="@string/user_agreement_message" />
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="28.0dip" android:layout_marginRight="28.0dip" android:layout_weight="1.0">
        <CheckBox android:gravity="top" android:id="@id/check_box" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/user_agreement_never_show_text" style="@style/DialogCheckBox" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="18.0dip">
        <Button android:id="@id/exit_button" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/startup_dialog_button_exit" style="@style/BlueButton" />
        <Button android:id="@id/confirm_button" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/startup_dialog_button_agree" style="@style/BlueButton" />
    </LinearLayout>
</LinearLayout>