<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:attrs="http://schemas.android.com/apk/res-auto">
    <android.support.v4.view.ViewPager android:id="@id/dual_sight_tutorial_view_pager" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <com.android.camera.ui.tutorial.DualSightHintContainer android:layout_gravity="bottom" android:id="@id/dualsight_tutorial_bottom_mask" android:background="@color/dualsight_edit_mode_bg_color" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_bar_height_optimal">
        <FrameLayout android:background="@color/dualsight_hint_mask_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/dualsight_tutorial_hint_text_size" android:textColor="@color/dualsight_tutorial_text_color" android:gravity="top" android:layout_gravity="top" android:id="@id/dualsight_tutorial_hint_text" android:layout_width="fill_parent" android:layout_height="@dimen/dualsight_tutorial_hint_portrait_area_height" android:layout_marginTop="@dimen/dualsight_tutorial_hint_portrait_margin_top" android:text="@string/dualsight_tutorial_hint" android:layout_marginStart="@dimen/dualsight_tutorial_hint_portrait_margin_horizontal" android:layout_marginEnd="@dimen/dualsight_tutorial_hint_portrait_margin_horizontal" />
            <CheckBox android:textSize="@dimen/dualsight_tutorial_checkbox_text_size" android:textColor="@color/dualsight_tutorial_text_color" android:layout_gravity="start|bottom|center" android:id="@id/dualsight_tutorial_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dualsight_tutorial_hint_portrait_margin_bottom" android:text="@string/user_agreement_never_show_text" android:layout_marginStart="@dimen/dualsight_tutorial_hint_portrait_margin_horizontal" android:layout_marginEnd="@dimen/dualsight_tutorial_hint_portrait_margin_horizontal_end" android:buttonTint="@color/dualsight_checkbox" />
            <Button android:textSize="@dimen/dualsight_tutorial_button_text_size" android:layout_gravity="end|bottom|center" android:id="@id/dualsight_tutorial_button" android:text="@string/pro_mode_tutorial_btn_finish" android:layout_marginEnd="@dimen/dualsight_tutorial_hint_portrait_margin_horizontal" style="@style/ProModeTutorialButton" />
        </FrameLayout>
    </com.android.camera.ui.tutorial.DualSightHintContainer>
    <com.rd.PageIndicatorView android:layout_gravity="bottom|center" android:id="@id/pageIndicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="48.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" attrs:piv_viewPager="@id/dual_sight_tutorial_view_pager" attrs:piv_radius="3.2999878dip" attrs:piv_padding="12.0dip" />
</FrameLayout>